# career-lighthouse

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Justfile  README.md  TODOS.md  code-quality-reviewer-prompt.md  docker-compose.yml  implementer-prompt.md  session_dump.txt  spec-reviewer-prompt.md
api/: .dockerignore  Dockerfile  cfg.py  config.py  dependencies.py  entrypoint.sh  limiter.py  main.py  models.py  pyproject.toml  requirements.txt
api/cfg/: career_profiles.yaml  kb.yaml  model.yaml  prompts.yaml  track_guidance.yaml
api/constants/: profile_fields.py
api/middleware/: security_headers.py
api/routers/: __init__.py  brief_router.py  chat_router.py  docs_router.py  ingest_router.py  kb_router.py  session_router.py
api/services/: career_profiles.py  embedder.py  employer_store.py  health_cache.py  ingestion.py  llm.py  runtime_paths.py  session_store.py  track_drafts.py  track_guidance.py  vector_store.py
api/tests/: conftest.py  test_ai_eval.py  test_brief_router.py  test_career_profiles.py  test_chat_logging.py  test_chat_router.py  test_docs_router.py  test_embedder.py  test_employer_store.py  test_ingest_dedup.py  test_ingest_router.py  test_ingestion.py  test_kb_analyse.py  test_kb_router.py  test_llm_hardening.py  test_llm_observability.py  test_session_intents.py  test_session_router.py  test_session_store_migration.py  test_session_track_guidance.py  test_storage_hardening.py  test_track_guidance.py  test_vector_store.py
api/tests/fixtures/: eval_queries.jsonl
api/utils/: sanitization.py
(+168 files in other folders)
