[project]
name = "career-lighthouse-api"
version = "0.1.0"
description = "FastAPI backend for Career Lighthouse"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.34.0",
    "slowapi==0.1.9",
    "fastapi==0.115.0",
    "numpy==2.4.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.5.2",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "python-multipart==0.0.9",
    "pyyaml==6.0.3",
    "qdrant-client==1.11.1",
    "sentence-transformers==3.1.1",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
